--- a/app/views/user/_user_info.html.erb
+++ b/app/views/user/_user_info.html.erb
@@ -15,7 +15,7 @@
   <p><label id="address">Address: *</label><%= f.text_field :address %></p>
   <p><label id="city">City: *</label><%= f.text_field :city %></p>
   <p><label id="region">Province/State: *</label><%= f.text_field :region %></p>
-  <p><label id="code">Postal/Zip Code:*</label><%= f.text_field :code %>
+  <p><label id="code">Postal/Zip Code:*</label><%= f.text_field :code %></p>
   
   <% unless @user.new_record? %>
   <p><label id="avatar">Account Avatar:</label>
