--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -1,1 +1,2 @@
+<% set_title 'Sign-Up' %>
 Thank you for signing up to Event Pooler. Please check your email for a link to confirm your registration.
