--- a/app/views/user/myaccount.html.erb
+++ b/app/views/user/myaccount.html.erb
@@ -1,4 +1,4 @@
-Update My Account<br />
+<% set_title 'My Account' %>
 <%= render :partial => 'user_info' %><br />
 <br />
 <%= link_to 'Delete My Account', delete_account_path, :confirm => 'Are you sure you want to delete your account?' %>
