--- a/app/views/main/index.erb
+++ b/app/views/main/index.erb
@@ -32,15 +32,21 @@
                     <%= render "shared/search_box" %>
                     <table width="100%" class="popular-events">
                     <tr>
-                        <th colspan="3">Popular Events around the World</th>
+                        <th colspan="3">Upcoming Events</th>
                     </tr>
-                    <% for i in (1..10) %>
-                    <tr>
-                        <td class="title"><a href="#" title="Event Name">Event Name Here</a></td>
-                        <td class="date">Nov 10, 2010</td>
-                        <td class="attend"><a href="#" title="Attend">Attend</a></td>
+					<% Event.find(:all, :order => 'starts_at DESC', :limit => 10).each do |event| %>
+					 <tr>
+                        <td class="title"><%= link_to event.name, event_path(event.id) %></td>
+                        <td class="date"><%= Time.at(event.starts_at.to_i).strftime("%b %e, %Y") %></td>
+                        <td class="attend">
+							<% unless event.attendees.include?(current_user) %>
+							<%= link_to 'Attend', attend_event_path(event.id) %>
+							<% else %>
+							<strong>Already Attending</strong>
+							<% end %>
+						</td>
                     </tr>
-                    <% end %>
+					<% end %>
                     </table>
                 </div>
                 <div class="clear-fix">&nbsp;</div>
