--- a/app/views/event/_filtered_groups.html.erb
+++ b/app/views/event/_filtered_groups.html.erb
@@ -1,3 +1,3 @@
-<% @groups.closest_to_user(current_user).visible.reject{|g| g.users.include?(current_user)}.each do |group| %>
+<%  @groups.closest_to_user(current_user).visible.reject{|g| g.users.include?(current_user)}.each do |group| %>
   <%= render :partial => 'group', :locals => {:group => group} %>
-<% end %>
+<% end unless @groups.blank? || !current_user %>
