--- a/app/views/event/_group.html.erb
+++ b/app/views/event/_group.html.erb
@@ -1,6 +1,11 @@
 <%= link_to group.name, group_path(group.event.id, group.id) %>
 <br />
-Based in - <%= group.city %>, <%= group.region %>
+<%  unless group.city.blank? && group.region.blank? %>
+Based in - <%= group.city %> <%= group.region %>
+<% end %>
 <br />
-Sharing - <%= group.sharables.map{|s| s.name}.to_sentence %>
+<% sharing = group.sharables.map{|s| s.name}.to_sentence %>
+<% unless sharing.blank? %>
+Sharing - <%= sharing %>
+<% end %>
 <br /><br />
