--- a/app/views/event/_my_groups.html.erb
+++ b/app/views/event/_my_groups.html.erb
@@ -1,4 +1,4 @@
-<% unless @groups.for_user(current_user).blank? %>
+<% unless current_user.nil? || @groups.for_user(current_user).blank? %>
   <h4>My Groups</h4>
   <% @groups.for_user(current_user).each do |group| %>
     <%= render :partial => 'group', :locals => {:group => group} %>
