--- a/app/views/main/_popular_events.html.erb
+++ b/app/views/main/_popular_events.html.erb
@@ -4,7 +4,7 @@
   </tr>
   <% @popular_events.each do |event| %>
   <tr>
-    <td class="title"><%= link_to CGI.unescapeHTML(event.name).html_safe, event_path(event.id) %></td>
+    <td class="title"><%= link_to event.safe_name, event_path(event.id) %></td>
     <td class="location"><%= event.city || event.region %></td>
     <td class="date"><%=  Time.at(event.starts_at.to_i).strftime("%b %e, %Y at %l:%M%p") rescue "" %></td>
   </tr>
