--- a/app/views/group/invite.html.erb
+++ b/app/views/group/invite.html.erb
@@ -1,3 +1,4 @@
+<% set_title 'Invite Friends' %>
 Enter the email address of a friend to invite to this group:<br />
 To invite multiple friends, separate their email address with a comma<br />
 <% form_tag do %>
