--- a/app/views/shared/_resources_sharing.html.erb
+++ b/app/views/shared/_resources_sharing.html.erb
@@ -1,1 +1,1 @@
-You are sharing <%= @my_sharables.empty? ? 'no resources' : @my_sharables.map{|s| s.name}.to_sentence  %>
+<strong>You are sharing <%= @my_sharables.empty? ? 'no resources' : @my_sharables.map{|s| s.name}.to_sentence  %></strong>
