--- a/app/views/shared/_update_sharables.html.erb
+++ b/app/views/shared/_update_sharables.html.erb
@@ -1,4 +1,7 @@
-What resources would you like to share? <br />
+<div id="resources_sharing">
+  <%= render :partial => 'shared/resources_sharing' %>
+</div>
+I would like to share: <br />
 <% form_tag update_sharables_path(@group.id), :remote => true do %>
   <% Sharable.all.each do |sharable| %>
     <% checked = @my_sharables.include?(sharable) %>
@@ -6,6 +9,3 @@ What resources would you like to share? <br />
     <%= label_tag(sharable.slug, sharable.name) %>
   <% end %>
 <% end %>
-<div id="resources_sharing">
-  <%= render :partial => 'shared/resources_sharing' %>
-</div>
