--- a/app/views/event/update.erb
+++ b/app/views/event/update.erb
@@ -6,43 +6,23 @@
   <% set_title "Edit '#{@event.safe_name}'" %>
 <% end %>
 
+<div class="form">
+<h2>Event Details</h2>
 <%= form_for :event do |f| %>
-<table>
-  <tr><td>
-  <%= f.label(:name, "Name:") %></td><td> <%= f.text_field(:name) %>
-  </td></tr>
-  <tr><td>
-  <%= f.label(:name, "Description:") %> </td><td><%= f.text_field(:description) %>
-  </td></tr>
-  <tr><td>
-  <%= f.label(:name, "Address:") %> </td><td><%= f.text_field(:address) %>
-  </td></tr>
-  <tr><td>
-  <%= f.label(:name, "City:") %> </td><td><%= f.text_field(:city) %>
-  </td></tr>
-  <tr><td>
-  <%= f.label(:name, "Province/State:") %> </td><td><%= f.text_field(:region) %>
-  </td></tr>
-  <tr><td>
-  <%= f.label(:name, "Postal/Zip Code:") %> </td><td><%= f.text_field(:code) %>
-  </td></tr>
-  <tr><td>
-  <%= f.label(:name, "Phone:") %> </td><td><%= f.text_field(:phone) %>
-  </td></tr>
-  <tr><td>
-  <%= f.label(:name, "Email:") %> </td><td><%= f.text_field(:email) %>
-  </td></tr>
-  <tr><td>
-  <%= f.label(:name, "Url:") %> </td><td><%= f.text_field(:url) %>
-  </td></tr>
-  <tr><td>
-  <%= f.label(:name, "Start Date/Time:") %> </td><td><%= f.text_field(:starts_at) %>
-  </td></tr>
-  <tr><td>
-  <%= f.label(:name, "End Date/Time:") %> </td><td><%= f.text_field(:ends_at) %>
-  </td></tr>
-  <tr><td>
-  <%= submit_tag("#{action} Event") %>
-  </td></tr>
+<%= f.error_messages %>
+  <p><%= f.label(:name, "Name:") %><%= f.text_field(:name) %></p>
+  <p><%= f.label(:description, "Description:") %><%= f.text_field(:description) %></p>
+  <p><%= f.label(:address, "Address:") %> <%= f.text_field(:address) %></p>
+  <p><%= f.label(:city, "City:") %> <%= f.text_field(:city) %></p>
+  <p><%= f.label(:region, "Province/State:") %> <%= f.text_field(:region) %></p>
+  <p><%= f.label(:code, "Postal/Zip Code:") %> <%= f.text_field(:code) %></p>
+  <p><%= f.label(:phone, "Phone:") %> <%= f.text_field(:phone) %></p>
+  <p><%= f.label(:email, "Email:") %> <%= f.text_field(:email) %></p>
+  <p><%= f.label(:url, "Url:") %> <%= f.text_field(:url) %></p>
+  <p><%= f.label(:starts_at, "Start Date/Time:") %> <%= f.text_field(:starts_at) %></p>
+  <p><%= f.label(:ends_at, "End Date/Time:") %> <%= f.text_field(:ends_at) %></p>
+  
+  <p class="submit"><%= submit_tag("#{action} Event") %></p>
+  
 <% end %>
-</table>
+</div>
