Added Event one day reminder notification back into source. Should be ran in a CRON

--- a/app/views/event_mailer/oneday_reminder.html.erb
+++ b/app/views/event_mailer/oneday_reminder.html.erb
@@ -1,1 +1,2 @@
-Blah
+<p>Hello <%= @user.name %>,</p>
+<p>This is just a friendly reminder that <%= @event.name %> is approaching fast and is on <%= @event.starts_at.strftime('%m/%d/%Y at %H:%M') %>.</p>
