--- a/app/views/group/show_group.erb
+++ b/app/views/group/show_group.erb
@@ -12,8 +12,13 @@
 <%= @group.city %> <%= @group.region %>
 <br />
 <% unless @group.users.include?(current_user) %>
-  <% unless @group.public? %>This group is private, but you can<% end %>
-  <%= link_to @group.public? ? 'Join' : 'Request to Join', join_group_path(@group.event.id, @group.id) %>
+  <% if @group.invite_only? %>
+    <br />
+    <%= render :partial => 'invitations' %>
+  <% else %>
+    <% unless @group.public? %>This group is private, but you can<% end %>
+    <%= link_to @group.public? ? 'Join' : 'Request to Join', join_group_path(@group.event.id, @group.id) %>
+  <% end %>
 <% end %>
 <% if @group.users.include?(current_user) && @group.memberships.approved.for_user(current_user).blank? %>
   Your group membership is awaiting approval from the administrator.
