Fix issue with comments when deleting your account

--- a/app/views/event/_event_url.html.erb
+++ b/app/views/event/_event_url.html.erb
@@ -2,5 +2,5 @@
 <% if @event.native? %>
   <%= link_to(@event.url, @event.url) unless @event.url.blank? %>
 <% else %>
-  <%= link_to(image_tag("#{@event.remote_source}_logo.gif", :alt => 'View source event.'), @event.url) unless @event.url.blank? %>
+  <%= link_to(image_tag("#{@event.remote_source}_logo.gif", :alt => 'View source event.'), @event.url, :target => '_blank') unless @event.url.blank? %>
 <% end %>
